--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,6 @@
     "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-import-helpers": "^1.2.1",
-    "prisma": "^4.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
@@ -29,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "prisma": "^4.5.0"
   }
 }
